fix: dark mode colors

--- a/src/styles/blocks/restaurants.pcss
+++ b/src/styles/blocks/restaurants.pcss
@@ -113,5 +113,5 @@
 }
 
 .dark .resto-card {
-  background-color: var(--darkgrey);
+  background-color: var(--darkpurplegrey);
 }
