--- a/src/styles/components/footer.pcss
+++ b/src/styles/components/footer.pcss
@@ -71,3 +71,7 @@ footer {
     }
   }
 }
+
+.dark footer {
+  background-color: var(--darkpurplegrey);
+}
