--- a/src/styles/components/hiw.pcss
+++ b/src/styles/components/hiw.pcss
@@ -93,7 +93,7 @@
   }
 
   &--accent {
-    background-color: var(--color-primary);
+    background-color: var(--darkpurplegrey);
     /* stylelint-disable-next-line selector-class-pattern */
     & .hiw-card__icon {
       color: var(--white);
