--- a/src/styles/utilities/colors.pcss
+++ b/src/styles/utilities/colors.pcss
@@ -8,7 +8,8 @@
   --darkgrey: #353535;
   --white: white;
   --black: black;
-  --darkpurple: #1d141d;
+  --darkpurplegrey: #2b2531;
+  --deeppurple: #1d141d;
   --color-primary: var(--purple);
   --color-primary-light: var(--lightpurple);
   --color-secondary: var(--pink);
@@ -19,8 +20,8 @@
 }
 
 .dark {
-  --color-bg: var(--darkgrey);
+  --color-bg: var(--darkpurplegrey);
   --color-fg: var(--white);
-  --color-grey: var(--darkpurple);
+  --color-grey: var(--deeppurple);
   --color-primary-light: var(--purple);
 }
